DI container draft

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "Evaneos/berthe",
+    "name": "evaneos/berthe",
     "description": "The model Framework made by Evaneos",
     "version": "1.0.0",
     "type": "library",
@@ -25,5 +25,8 @@
         "psr-0" : {
             "" : "src/"
         }
+    },
+    "require" : {
+        "symfony/yaml": "2.4.*@dev"
     }
 }
