adding phpdoc, removing trailing spaces, added interceptor management, and some minor fixes

--- a/test/config/part/container_test_interceptors.yml
+++ b/test/config/part/container_test_interceptors.yml
@@ -1,3 +1,5 @@
 classes :
-    TransactionInterceptor :
-        class : Berthe_Interceptor_Transaction
+    ExceptionInterceptor :
+        class : Berthe_Interceptor_Exception
+    PrettyExceptionInterceptor :
+        class : PrettyExceptionInterceptor
