--- a/test/config/part/container_test_service.yml
+++ b/test/config/part/container_test_service.yml
@@ -1,8 +1,8 @@
 classes :
     CountryService :
         class : Berthe_Service_Country
+        singleton : true
         arguments : [ 1, 2 ]
         call :
             setManager : [ @CountryManager ]
-        interceptor :
-            - @TransactionInterceptor
+        interceptor : [ @ExceptionInterceptor, @PrettyExceptionInterceptor ]
