adding configuration abstraction

--- a/test/config/part/container_test_storage.yml
+++ b/test/config/part/container_test_storage.yml
@@ -2,3 +2,5 @@ classes :
     CountryStorage:
         class : Berthe_Store_Echo
         interceptor : [ @ExceptionInterceptor ]
+        props :
+            injectedVariable : "zomg lolilol"
