--- a/test/config/part/container_test_storage.yml
+++ b/test/config/part/container_test_storage.yml
@@ -1,6 +1,6 @@
 classes :
     CountryStorage:
-        class : Berthe_Store_Echo
+        class : Berthe_Store_Error
         interceptor : [ @ExceptionInterceptor ]
         props :
             injectedVariable : "zomg lolilol"
