--- a/composer.json
+++ b/composer.json
@@ -23,10 +23,11 @@
     ],
     "autoload" : {
         "psr-0" : {
-            "\\Berthe" : "src/"
+            "Berthe\\" : "src/"
         }
     },
     "require" : {
-        "doctrine/annotations": "1.0.*@dev"
+        "doctrine/annotations": "1.0.*@dev",
+        "zendframework/zendframework1": "1.12.*@dev"
     }
 }
