update name in composer.json

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "oliviermadre/berthe",
+    "name": "evaneos/berthe",
     "description": "The model Framework made by Evaneos",
     "version": "1.0.0",
     "type": "library",
