--- a/composer.json
+++ b/composer.json
@@ -37,7 +37,8 @@
         "doctrine/annotations": "~1.2",
         "zf1/zend-db": "~1.12",
         "psr/log": "~1.0",
-        "symfony/stopwatch": "~2.6"
+        "symfony/stopwatch": "~2.6",
+        "league/event": "dev-master as 2.x-dev"
     },
     "require-dev" : {
         "phpunit/phpunit": "~4.0"
@@ -46,5 +47,11 @@
         "branch-alias": {
             "dev-master": "3.0.x-dev"
         }
-    }
+    },
+    "repositories": [
+        {
+            "type": "vcs",
+            "url": "git@github.com:Evaneos/berthe.git"
+        }
+    ]
 }
