--- a/composer.json
+++ b/composer.json
@@ -34,11 +34,12 @@
         "monolog/monolog": "Allows more advanced logging of the application flow"
     },
     "require" : {
+        "php": ">=5.4.0",
         "doctrine/annotations": "~1.2",
         "zf1/zend-db": "~1.12",
         "psr/log": "~1.0",
         "symfony/stopwatch": "~2.6",
-        "league/event": "dev-master as 2.x-dev"
+        "league/event": "^2.0"
     },
     "require-dev" : {
         "phpunit/phpunit": "~4.0"
@@ -47,11 +48,5 @@
         "branch-alias": {
             "dev-master": "3.0.x-dev"
         }
-    },
-    "repositories": [
-        {
-            "type": "vcs",
-            "url": "git@github.com:Evaneos/event.git"
-        }
-    ]
+    }
 }
