--- a/composer.json
+++ b/composer.json
@@ -46,7 +46,8 @@
     },
     "extra": {
         "branch-alias": {
-            "dev-master": "3.0.x-dev"
+            "dev-master": "5.0.x-dev",
+            "dev-add-method-translation": "5.1.x-dev"
         }
     }
 }
