--- a/.travis.yml
+++ b/.travis.yml
@@ -1,16 +1,15 @@
 language: php
-
+dist: trusty
 sudo: false
-
 php:
   - 5.5
 
 before_install:
-    - phpenv config-rm xdebug.ini
-    - composer selfupdate -q
+  - phpenv config-rm xdebug.ini
+  - composer selfupdate -q
 
 install:
-    - composer install
+  - composer install
 
 script:
-    - $TRAVIS_BUILD_DIR/vendor/bin/phpunit test/
+  - $TRAVIS_BUILD_DIR/vendor/bin/phpunit test/
